--- a/servelets/Servelets/web.xml
+++ b/servelets/Servelets/web.xml
@@ -5,6 +5,29 @@
                              http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
+    <!-- Display Name for the Web Application -->
+    <display-name>Online Java Quiz System</display-name>
+
+    <!-- Welcome File -->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
+    <!-- Context Parameters -->
+    <context-param>
+        <param-name>dbUrl</param-name>
+        <param-value>jdbc:mysql://localhost:3306/quizdb</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbUsername</param-name>
+        <param-value>root</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbPassword</param-name>
+        <param-value>password</param-value>
+    </context-param>
+
     <!-- Servlet Definitions -->
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
@@ -29,6 +52,11 @@
     <servlet>
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>com.example.LogoutServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>QuizServlet</servlet-name>
+        <servlet-class>com.example.QuizServlet</servlet-class>
     </servlet>
 
     <!-- Servlet Mappings -->
@@ -56,5 +84,35 @@
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>QuizServlet</servlet-name>
+        <url-pattern>/quiz</url-pattern>
+    </servlet-mapping>
+
+    <!-- Session Timeout -->
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+
+    <!-- Error Pages -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.jsp</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/error/error.jsp</location>
+    </error-page>
+
+    <!-- Filters -->
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>com.example.filters.AuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/dashboard/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
